This is the first refactored code ready for hosting

--- a/src/Styles/Product.css
+++ b/src/Styles/Product.css
@@ -150,77 +150,16 @@
 
 /* testimonial.css Styling*/
 
-.testimonial-swiper-slide {
+/* .testimonial-swiper-slide {
     background-position: center;
     background-size: cover;
     width: 300px;
     height: 300px;
-}
-
-.testimonial-swiper-slide img {
-    display: block;
-    width: 100%;
-}
-
-.testimonial-swiper-wrapper {
-    height: 100%;
-    width: 70%;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    background-color: rgb(216, 231, 231);
-    padding: 10px;
-
-}
-
-
-.testimonial-image {
-    border-radius: 50%;
-    flex: 1;
-}
-
-.testimonial-image img {
-    width: 100%;
-    border-radius: 50%;
-}
-
-.testimonial-swiper-content {
-    flex: 5;
-    margin-left: 10px;
-
-}
-
-.testimonial-swiper-content .name {
-    text-align: center;
-}
-
-.testimonial-swiper-content .name h3 {
-    font-size: 23px;
-    font-weight: 600;
-    color: rgb(61, 51, 51);
-}
-
-.testimonial-swiper-content .name h4 {
-    font-size: 17px;
-}
-
-i.fa-quote-left {
-    font-size: 40px;
-    color: rgb(52, 52, 61);
-}
+} */
 
 
 
-.testimonial-title {
-    text-align: center;
-    margin: 40px 0;
-}
 
-.testimonial-title h3 {
-    font-size: 30px;
-    font-weight: 600;
-    color: rgb(59, 55, 59);
-}
 
 @media(max-width:600px) {
     .testimonial-swiper-wrapper {
@@ -239,205 +178,6 @@ i.fa-quote-left {
 
 
 
-
-/* services.css styling */
-.services-row {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 100px;
-
-}
-
-.service {
-    width: 330px;
-    transition: .4s ease-in-out;
-    box-shadow: 1px 1px 4px 1px rgb(198, 198, 238);
-    z-index: 100;
-    cursor: pointer;
-}
-
-.service .image {
-    width: 80px;
-    height: 80px;
-    margin: auto;
-    margin-top: -40px;
-    border: 4px solid blue;
-    /* background-color: white; */
-    transform: rotate(45deg);
-    transition: transform 1.5s;
-}
-
-.service .image i {
-    width: 100%;
-    transform: rotate(-45deg);
-    color: orange;
-    font-size: 37px;
-    padding: 23px 19px;
-}
-
-.image i.fa-bolt {
-    padding: 18px 20px;
-    color: orange;
-
-}
-
-.service:hover .image {
-    transform: rotate(406deg);
-
-}
-
-.service:hover {
-    transform: scale(1.1, 1.1)
-}
-
-.title {
-    z-index: 1;
-}
-
-.title h4 {
-    background: rgb(214, 144, 14);
-    color: white;
-    padding: 10px;
-    width: 80%;
-    margin: 0 auto;
-    font-size: 20px;
-    margin-top: 20px;
-    position: relative;
-    text-align: center;
-
-}
-
-.description {
-    text-align: center;
-    color: rgb(36, 33, 33);
-    padding: 10px;
-}
-
-.title h4::after {
-    content: '';
-    width: 40px;
-    height: 30px;
-    background: linear-gradient(to right, #fff, #007bff);
-    position: absolute;
-    right: -4px;
-    top: -4px;
-    z-index: -1;
-}
-
-.title h4::before {
-    content: '';
-    width: 40px;
-    height: 30px;
-    background: linear-gradient(to left, #fff, #007bff);
-    position: absolute;
-    left: -4px;
-    bottom: -4px;
-    z-index: -1;
-}
-
-.container {
-    padding: 4px;
-    width: 80%;
-    margin: auto;
-}
-
-.lines {
-    width: 100%;
-    height: 45px;
-    position: relative;
-}
-
-.container h4 {
-    text-align: center;
-}
-
-.lines::after,
-.lines::before {
-    content: '';
-    position: absolute;
-    top: 45%;
-    width: 45%;
-    background-color: rgb(110, 77, 185);
-    height: 2px;
-    margin: auto;
-}
-
-.lines::after {
-    right: 0;
-}
-
-.lines::before {
-    left: 0;
-}
-
-.circle {
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    border: 2px solid orange;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    top: 0;
-    margin: auto;
-}
-
-@media(max-width:600px) {
-    .services-row {
-        flex-direction: column;
-
-    }
-
-    .services-row .service {
-        width: 90%;
-        margin: 30px auto;
-    }
-}
-
-
-
-
-/* title.css styling */
-
-
-
-.header {
-    background-image: linear-gradient(rgba(15, 1, 1, 0.644), rgba(6, 6, 7, 0.690)), url('../../public/novelPics/solar3.jpg');
-    background-position: center;
-    padding: 20px;
-    margin-bottom: 40px;
-    top: 0;
-    z-index: 1000;
-}
-
-.header-nav {
-    width: 250px;
-    font-size: 1.2em;
-    /* color: white; */
-    font-weight: bolder;
-    text-align: center;
-    margin: auto;
-    background-color: orange;
-    padding: 15px;
-    border-radius: 1.5px;
-}
-
-.header-nav i {
-    margin: 0 9px;
-}
-
-.header-nav a {
-    color: rgb(41, 38, 38);
-    font-size: 20px;
-}
-
-.header h1 {
-    color: white;
-    text-align: center;
-    font-family: Poppins, sans-serif;
-    margin-bottom: 12px;
-}
 
 
 
@@ -610,266 +350,6 @@ i.fa-quote-left {
 /* About.css styling */
 
 
-.about-section {
-    background-image: url(../../public/novelPics/solar1.jpg);
-    padding: 35px 10px;
-
-    overflow: hidden;
-    background-size: 65%;
-    background-repeat: no-repeat;
-    margin: 50px 0;
-
-}
-
-li {
-    list-style-type: none;
-}
-
-.inner-section {
-    width: 62%;
-    height: 100%;
-    overflow: auto;
-    float: right;
-    /* margin-right: 40px; */
-    padding: 40px;
-    background-color: rgb(255, 255, 255);
-}
-
-.inner-section h3,
-.achievements h4 {
-    margin-bottom: 5px;
-    color: blue;
-    font-size: 21px;
-}
-
-.achievements li {
-    color: rgb(216, 88, 88);
-}
-
-.achievements i {
-    color: black;
-}
-
-.inner-section p {
-    margin-bottom: 25px;
-    color: rgb(187, 99, 99);
-}
-
-.social-icons {
-    text-align: center;
-}
-
-.social-icons i {
-    padding: 9px;
-    color: orange;
-    font-size: 24px;
-    transition: .2s ease-in-out;
-
-}
-
-.social-icons i:hover {
-    transform: scale(1.15, 1.15);
-    transition: .2s ease-in-out;
-}
-
-.company_statement {
-    display: flex;
-    width: 70%;
-    gap: 80px;
-    justify-content: space-around;
-    margin: 50px auto;
-}
-
-.mission,
-.vision {
-    flex: 1;
-    padding: 16px;
-    text-align: center;
-    box-shadow: 1px 1px 4px 1px rgb(148, 142, 142);
-    background-color: white;
-}
-
-.mission p,
-.vision p {
-    text-align: left;
-    font-size: 1.1rem;
-    font-family: Arial, Helvetica, sans-serif;
-    color: rgb(71, 68, 68);
-}
-
-.mission i,
-.vision i {
-    font-size: 35px;
-    margin-bottom: 16px;
-    color: orange;
-}
-
-.mission h4,
-.vision h4 {
-    font-size: 1.5rem;
-    color: rgb(61, 55, 55);
-    margin-bottom: 16px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-::-webkit-scrollbar {
-    width: 8px;
-}
-
-::-webkit-scrollbar-track {
-    background-color: rgb(44, 42, 43);
-    cursor: pointer;
-
-
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: rgb(87, 87, 168);
-    border-radius: 20px;
-}
-
-.choose_us {
-    width: 50%;
-    margin: auto;
-    padding: 20px;
-    text-align: center;
-}
-
-.choose_us p {
-    font-size: 17px;
-    text-align: left;
-    margin-bottom: 25px;
-}
-
-.choose_us i {
-    font-size: 50px;
-    color: orange;
-    margin: 20px 0;
-}
-
-.choose_us h2 {
-    color: blue;
-}
-
-.choose_us a {
-    background-color: red;
-    padding: 13px;
-    color: white;
-    border-radius: 70px;
-    font-weight: 600;
-    font-size: 21px;
-}
-
-.our-team h2 {
-    text-align: center;
-    margin: 20px;
-}
-
-.our-team {
-    margin: 70px 0;
-}
-
-.team {
-    display: flex;
-    justify-content: center;
-    width: 70%;
-    margin: 10px auto;
-    gap: 30px;
-
-}
-
-.team-card {
-    width: 240px;
-    background-color: white;
-    border-radius: 14px;
-    box-shadow: 1px 1px 5px 1px rgb(88, 83, 83);
-    z-index: 100;
-    position: relative;
-    cursor: pointer;
-    transition: .4s ease-in-out;
-
-}
-
-.team-card:hover {
-    transform: scale(1.03);
-}
-
-.team-card-image {
-    width: 100px;
-    height: 100px;
-    margin: 20px auto;
-    border-radius: 50%;
-
-}
-
-.team-card::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    border-top-right-radius: 14px;
-    border-top-left-radius: 14px;
-    z-index: -100;
-    height: 50%;
-    background-color: blue;
-}
-
-.team-card-image img {
-    width: 100%;
-    border-radius: 50%;
-    border: 3px solid rgb(247, 247, 247);
-
-}
-
-.team-card p {
-    text-align: center;
-    margin: 12px 0;
-    font-weight: 700;
-    color: blue;
-}
-
-.team-card .title {
-    font-size: 15px;
-    color: rgb(68, 63, 63);
-}
-
-@media(max-width:700px) {
-    .team {
-        flex-direction: column;
-        width: 70%;
-        margin: auto;
-    }
-
-    .choose_us {
-        width: 100%;
-        padding: 17px;
-    }
-
-    .company_statement {
-        flex-direction: column;
-        width: 90%;
-    }
-
-
-
-
-}
-
-@media(max-width:900px) {
-    .about-section {
-        padding: 0;
-        background-image: none;
-    }
-
-    .inner-section {
-        padding: 10px;
-        width: 90%;
-        margin: auto;
-        float: none;
-    }
-}
-
-
-
 
 
 
@@ -977,42 +457,7 @@ li {
     margin-right: 5px;
 }
 
-.show-bar {
-    display: flex;
-    justify-content: space-evenly;
-    background-color: white;
-    margin: 50px 0;
-    padding: 30px 0;
-}
 
-.unit {
-    text-align: center;
-    padding: 12px 0;
-    border-bottom: 1px solid rgb(222, 219, 224);
-}
-
-.unit i {
-    background-color: rgb(199, 225, 231);
-    color: rgb(37, 35, 39);
-    padding: 20px;
-    border-radius: 60px;
-    font-size: 5rem;
-    font-weight: 800;
-    margin-bottom: 10px;
-
-}
-
-
-.unit h4 span {
-    font-size: 1.5rem;
-    font-weight: 700;
-}
-
-.unit p {
-    font-size: 18px;
-    font-weight: 600;
-    color: blue;
-}
 
 
 @media(max-width:500px) {
