--- a/src/Styles/novelStyle.css
+++ b/src/Styles/novelStyle.css
@@ -1,10 +1,3 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-
 .progress-bar {
     position: fixed;
     z-index: 10;
@@ -21,21 +14,14 @@
 
 }
 
-header {
-    position: sticky;
-    background-color: white;
-    top: 0;
-    padding: 0 9px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    z-index: 10000;
+:root {
+    --primary-color: var(rgb(7, 4, 104));
 }
 
 
 .header-logo {
-    height: 80px;
-    width: 80px;
+    height: 90px;
+    width: 90px;
 
 }
 
@@ -43,55 +29,27 @@ header {
     width: 100%;
 }
 
-header .navbar ul {
-    list-style: none;
-}
 
-header .navbar ul li {
+
+/* header .navbar ul li {
     position: relative;
     float: left;
 
-}
+} */
 
-header .navbar ul li a {
+/* .navbar ul li a {
     font-size: 15px;
     font-weight: 700;
     color: rgb(62, 6, 151);
     display: block;
     padding: 9px;
     text-transform: uppercase;
-}
+} */
 
-header .navbar ul li.main-link::after {
-    content: '';
-    height: 3px;
-    background-color: rgb(136, 136, 223);
-    width: 0;
-    transition: .3s ease-in-out;
-    margin: auto;
-    border-radius: 15px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-}
 
-header .navbar ul li.main-link:hover::after {
-    width: 100%;
-}
 
-.account-link {
-    position: absolute;
 
-}
-
-.account-link button {
-    display: block;
-    margin: 3px;
-    padding: 5px;
-    width: 100%;
-}
-
-header .navbar ul li ul {
+/* header .navbar ul li ul {
     position: absolute;
     left: -100px;
     width: 200px;
@@ -99,7 +57,7 @@ header .navbar ul li ul {
     display: none;
     z-index: 10;
 
-}
+} */
 
 header .navbar ul li .account-link {
     left: -80px;
@@ -122,7 +80,7 @@ header .navbar ul li .account-link button {
     color: white;
 }
 
-header .navbar ul li ul li {
+/* header .navbar ul li ul li {
     width: 100%;
 }
 
@@ -137,12 +95,9 @@ header .navbar ul li ul li ul {
     left: 170px;
     top: 0;
     background-color: rgb(32, 9, 58);
-}
+} */
 
-header .navbar ul li:focus-within>ul,
-header .navbar ul li:hover>ul {
-    display: initial;
-}
+
 
 #menu-bar {
     display: none;
@@ -255,30 +210,17 @@ i.fa-bars {
         display: inline-block;
     }
 
-    header {
-        padding: 20px;
-    }
+
 
     header label {
         display: initial;
-    }
-
-    header .navbar {
-        position: absolute;
-        top: 100%;
-        left: 0;
-        right: 0;
-        background: #fff;
-        border-top: 1px solid rgb(85, 70, 70);
-        display: none;
-        box-shadow: none;
     }
 
     header .navbar ul li {
         width: 100%;
     }
 
-    header .navbar ul li ul {
+    /* header .navbar ul li ul {
         position: relative;
         width: 100%;
     }
@@ -287,7 +229,7 @@ i.fa-bars {
     header .navbar ul li ul li ul {
         width: 100%;
         left: 0;
-    }
+    } */
 
     #menu-bar:checked~.navbar {
         display: initial;
@@ -335,23 +277,14 @@ body {
 .enquiry a {
     display: inline-block;
     padding: 10px 10px;
-    background-color: orange;
-    font-size: 18px;
+    font-size: 21px;
     color: white;
     margin: 5px;
-    font-weight: 800;
-    /*color: white;
-    font-size: .92rem;
-    border-radius: 5px;
-    color: white;
-    background-color: rgb(173, 119, 17);
-    
-    transition: all .9s ease-in-out;
-    cursor: pointer; */
+
 }
 
 .enquiry a:hover {
-    background-color: rgb(245, 161, 6);
+    background-color: rgb(7, 4, 104) !important;
 }
 
 .swiper-content,
@@ -492,40 +425,9 @@ body {
     }
 }
 
-.show-bar {
-    display: flex;
-    justify-content: space-evenly;
-    background-color: white;
-    margin: 50px 0;
-    padding: 30px 0;
-}
-
-.unit {
-    text-align: center;
-}
-
-.unit i {
-    background-color: orange;
-    color: rgb(37, 35, 39);
-    padding: 20px;
-    border-radius: 60px;
-    font-size: 5rem;
-    font-weight: 800;
-    margin-bottom: 10px;
-
-}
 
 
-.unit h4 span {
-    font-size: 1.5rem;
-    font-weight: 700;
-}
 
-.unit p {
-    font-size: 18px;
-    font-weight: 600;
-    color: orange;
-}
 
 @media(max-width:500px) {
     .swiper nav button {
@@ -680,25 +582,6 @@ body {
     color: rgb(64, 68, 63);
 }
 
-.about-container {
-    display: flex;
-    align-items: center;
-    padding: 15px;
-    gap: 15px;
-}
-
-.about-text-block,
-.about-image {
-    flex: 1;
-}
-
-.about-text-block p {
-    color: rgb(170, 118, 20);
-}
-
-.about-image img {
-    width: 100%;
-}
 
 .testimonial .swiper {
     width: 100%;
@@ -800,8 +683,7 @@ body {
 }
 
 .footer {
-    padding: 10px;
-    margin-top: 40px;
+
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -936,7 +818,7 @@ body {
 .footercol2bottom ul li a {
     font-size: 13px;
     text-align: left;
-    color: rgb(199, 199, 218);
+    color: rgb(199, 199, 218) !important;
 }
 
 .footercontact .phonenumber {
@@ -1013,9 +895,6 @@ body {
         background-color: rgb(238, 225, 225);
     }
 
-    .about-image {
-        width: 70%;
-    }
 
 
 
